--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.4",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.5",
     "@nestjs/platform-express": "^9.0.0",
+    "apollo-server-express": "^3.10.4",
+    "cypher-query-builder": "^6.0.4",
+    "graphql": "^16.6.0",
+    "neo4j-driver": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
